# snip

snip-cli/: Cargo.toml  README.md  postgres_up.sql  scrap  snip.db  up.sql
snip-cli/src/: database.rs  interactive.rs  main.rs  search_tui.rs  snippet.rs
snip-cli/src/database/: sqlite.rs
snip-cli/src/database/sqlite/: add.rs  search.rs
snip-cli/src/search_tui/: app.rs  document.rs  events.rs  handler.rs  interface.rs  results.rs  temp.rs
snip-cli/src/snippet/: add_from_clipboard.rs  add_from_file.rs  add_from_files.rs
snip-extension/: package-lock.json  package.json  rollup.config.js
snip-extension/public/: global.css  manifest.json  scrap  styles.css
snip-extension/src/: App.svelte  (+3 more)
snip-frontend/: README.md  package-lock.json  package.json  scrap.js
snip-server/: Cargo.toml  README.md  addbookmark.sh  test-get.sh  test.sh  test2.sh
snip-server/migrations/: 20220807112727_snip.sql
snip-server/scrap/: dbkm.rs  dimg.rs  dqut.rs
snip-server/sql/: load_db.sh  postgres_up.sql
snip-server/src/: broadcast.rs  guesslang.rs  main.rs  scrap.rs  telemetry.rs
snip-server/src/lib/: code.rs  download.rs  favicon.rs  mod.rs  storage.rs
snip-server/src/lib/download/: content_type.rs  file_content.rs  filename.rs
snip-server/src/lib/images_old/: save_base64.rs  save_common.rs
snip-server/src/lib/storage/: bookmarks.rs  images.rs  quotes.rs
snip-server/src/lib/storage/images/: favicon.rs  original.rs  thumbnail.rs  utils.rs
snip-server/src/lib/url/: mod.rs
snip-server/src/models/: mod.rs  snippet.rs
snip-server/src/routes/: add.rs  get.rs  mod.rs  sse.rs  trash_snippet.rs
snip-server/src/tests/: mod.rs  test_file_download.rs
(+35 files in other folders)
