[package]
name = "snip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
arboard = "2.1.1"
chrono = "0.4.19"
clap = { version = "3.2.10", features = ["derive"] }
colored = "2"
crossterm = "0.23"
dotenv = "0.15.0"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
tui = "0.18"
tui-input = "0.4.2"
syntect = "5.0"
