[package]
name = "snip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.2"
actix-web = "4"
actix-web-lab = "0.16.9"
anyhow = "1.0"
base64 = "0.13.0"
chrono = {version="0.4.19", features=["serde"]}
dotenv = "0.15.0"
futures = "0.3.24"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
headless_chrome = "0.9.0"
image = "0.24.3"
mime = "0.3.16"
mime_guess = "2.0.4"
parking_lot = "0.12"
pyo3 = {version="0.17.1", features=["auto-initialize"]}
rand = "0.8.5"
regex = "1.6.0"
reqwest = "0.11.11"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1"
sqlx = { version = "0.6", features = [ "time", "runtime-actix-native-tls" , "postgres", "chrono" ] }
tracing = "0.1.37"
tracing-actix-web = "0.6.1"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
url = "2.2.2"
webp = "0.2.2"
